--- a/man/opusenc.1
+++ b/man/opusenc.1
@@ -13,6 +13,8 @@ opusenc \- encode audio into the Opus format
 ] [
 .B -V
 ] [
+.B --help-picture
+] [
 .B --quiet
 ] [
 .B --bitrate
@@ -40,32 +42,23 @@ opusenc \- encode audio into the Opus format
 .B --max-delay
 .I ms
 ] [
-.B --serial
-.I serial number
-] [
-.B --save-range
-.I file
-] [
-.B --set-ctl-int
-.I ctl=value
-] [
-.B --comment
-.I tag=value
+.B --title
+.I 'track title'
 ] [
 .B --artist
 .I author
 ] [
-.B --title
-.I 'track title'
-] [
 .B --album
 .I 'album title'
+] [
+.B --genre
+.I genre
 ] [
 .B --date
 .I YYYY-MM-DD
 ] [
-.B --genre
-.I genre
+.B --comment
+.I tag=value
 ] [
 .B --picture
 .IB filename | specification
@@ -92,61 +85,73 @@ opusenc \- encode audio into the Opus format
 .I flag
 ] [
 .B --ignorelength
+] [
+.B --serial
+.I serial number
+] [
+.B --save-range
+.I file
+] [
+.B --set-ctl-int
+.I ctl=value
 ]
 .I input.wav
 .I output.opus
 
 .SH DESCRIPTION
 .B opusenc
-reads audio data in either raw, Wave, or AIFF format and encodes it into an
+reads audio data in Wave, AIFF, FLAC, Ogg/FLAC,
+or raw PCM format and encodes it into an Ogg
 Opus stream. If the input file is "-" audio data is read from stdin.
-Likewise, if the output file is "-" opus data is written to stdout.
+Likewise, if the output file is "-" the Ogg Opus stream is written to stdout.
 
 Unless quieted
 .B opusenc
 displays fancy statistics about the encoding progress.
 
 .SH OPTIONS
+.SS "General options"
 .IP "-h, --help"
 Show command help
 .IP "-V, --version"
 Show the version number
+.IP "--help-picture"
+Show help on attaching album art
 .IP "--quiet"
-Quiet mode. No messages are displayed.
+Enable quiet mode. No messages are displayed.
+
+.SS "Encoding options"
 .IP "--bitrate N.nnn"
-Target bitrate in kbit/sec (6-256 per channel)
+Set target bitrate in kbit/sec (6-256 per channel)
 
 In VBR mode this specifies the average rate for a large and diverse
 collection of audio. In CVBR and Hard-CBR mode it specifies the specific
 output bitrate.
 
 Default for >=44.1kHz input is 64kbps per mono stream, 96kbps per coupled pair.
-
 .IP "--vbr"
 Use variable bitrate encoding (default)
-
 In VBR mode the bitrate may go up and down freely depending on the content
 to achieve more consistent quality.
-
 .IP "--cvbr"
 Use constrained variable bitrate encoding.
 
 Outputs to a specific bitrate. This mode is analogous to CBR in AAC/MP3
-encoders and managed mode in vorbis coders. This delivers less consistent
+encoders and managed mode in Vorbis coders. This delivers less consistent
 quality than VBR mode but consistent bitrate.
 .IP "--hard-cbr"
 Use hard constant bitrate encoding.
 
 With hard-cbr every frame will be exactly the same size, similar to how
 speech codecs work. This delivers lower overall quality but is useful
- where bitrate changes might leak data in encrypted channels or on
+where bitrate changes might leak data in encrypted channels or on
 synchronous transports.
 .IP "--comp N"
-Encoding computational complexity (0-10, default: 10). Zero gives the
+Set encoding computational complexity (0-10, default: 10). Zero gives the
 fastest encodes but lower quality, while 10 gives the highest quality
 but slower encoding.
 .IP "--framesize N"
-Maximum frame size in milliseconds (2.5, 5, 10, 20, 40, 60, default: 20)
+Set maximum frame size in milliseconds (2.5, 5, 10, 20, 40, 60, default: 20)
 .br
 Smaller framesizes achieve lower latency but less quality at a given
 bitrate.
@@ -154,49 +159,40 @@ bitrate.
 Sizes greater than 20ms are only interesting at fairly low
 bitrates.
 .IP "--expect-loss N"
-Percentage packet loss to expect (default: 0)
+Set expected packet loss in percent (default: 0)
 .IP "--downmix-mono"
 Downmix to mono
 .IP "--downmix-stereo"
 Downmix to stereo (if >2 channels input)
 .IP "--max-delay N"
-Maximum container delay in milliseconds (0-1000, default: 1000)
-.IP "--serial n"
-Forces the stream serial number to a specified value (instead of being random).
-This is used to make the encoder deterministic for testing and is not generally recommended.
-.IP "--save-range file"
-Saves check values for every frame to a file
-.IP "--set-ctl-int x=y"
-Pass the encoder control x with value y (advanced)
-Preface with s: to direct the ctl to multistream s
-.br
-This may be used multiple times
+Set maximum container delay in milliseconds (0-1000, default: 1000)
 
-.IP "--comment tag=value"
-Add an extra comment.  This may be used multiple times, and all
-instances will be added to each of the input files specified. The argument
-should be in the form "tag=value".
-See the vorbis-comment specification for well known tag names:
-http://www.xiph.org/vorbis/doc/v-comment.html
+.SS "Metadata options"
+.IP "--title title"
+Set the track title comment field to
+.I title
 .IP "--artist artist"
 Set the artist comment field to
 .I artist.
 This may be used multiple times to list contributing artists individually.
 Note that some playback software does not display multiple artists gracefully.
-.IP "--title title"
-Set the track title comment field to
-.I title
 .IP "--album album"
 Set the album or collection title field to
 .I album
 .IP "--date YYYY-MM-DD"
 Set the date comment field to
-.I YYYY-MM-DD
+.I YYYY-MM-DD.
+This may be shortened to YYYY-MM or YYYY.
 .IP "--genre genre"
 Set the genre comment field to
 .I genre.
 This option may be specified multiple times to tag a track with
 multiple overlapping genres.
+.IP "--comment tag=value"
+Add an extra comment.  This may be used multiple times.  The argument
+should be in the form "tag=value".
+See the vorbis-comment specification for well known tag names:
+http://www.xiph.org/vorbis/doc/v-comment.html
 .IP "--picture filename|specification"
 Attach album art for the track.
 
@@ -218,7 +214,7 @@ specification.
 
 The format of
 .I specification
-is [\fBtype\fR]|[\fBmime-type\fR]|[\fBdescription\fR]|[\fBwidth\fRx\fBheight\fRx\fBdepth\fR[/\fBcolors\fR]]|\fBfilename\fR
+is [\fBtype\fR]|[\fBmedia-type\fR]|[\fBdescription\fR]|[\fBwidth\fRx\fBheight\fRx\fBdepth\fR[/\fBcolors\fR]]|\fBfilename\fR
 
 .I type
 is an optional number describing the nature of the picture.
@@ -270,33 +266,34 @@ The default is 3 (front cover).
 More than one --picture option can be specified to attach multiple pictures.
 There may only be one picture each of type 1 and 2 in a file.
 
-.I mime-type
+.I media-type
 is optional. If left blank, it will be detected from the file. For
 best compatibility with players, use pictures with a
-.I mime-type
+.I media-type
 of image/jpeg or image/png. The
-.I mime-type
+.I media-type
 can also be "-->" to mean that
 .I filename
 is actually a URL to an image, though this use is discouraged.
 The file at the URL will not be fetched.
-The URL itself is stored in the comment field.
+The URL itself is stored in the metadata.
 
 .I description
 is optional. The default is an empty string.
 
 The next part specifies the resolution and color information. If the
-.I mime-type
-is image/jpeg, image/png, or image/gif, you can usually leave this empty and
-they can be detected from the file. Otherwise, you must specify the width in
+.I media-type
+is image/jpeg, image/png, or image/gif, this can usually be left empty
+and the information will be read from the file.
+Otherwise, you must specify the width in
 pixels, height in pixels, and color depth in bits-per-pixel. If the image has
 indexed colors you should also specify the number of colors used. If possible,
 these are checked against the file for accuracy.
 
 .I filename
 is the path to the picture file to be imported, or the URL if the
-.I mime-type
-is -->.
+.I media-type
+is "-->".
 .IP "--padding n"
 Reserve
 .I n
@@ -307,8 +304,9 @@ Don't propagate metadata tags from the input file.
 .IP "--discard-pictures"
 Don't propagate pictures or art from the input file.
 
+.SS "Input options"
 .IP "--raw"
-Raw (headerless) PCM input
+Interpret input as raw PCM data without headers
 .IP "--raw-bits N"
 Set bits/sample for raw input (default: 16)
 .IP "--raw-rate N"
@@ -316,11 +314,23 @@ Set sampling rate for raw input (default: 48000)
 .IP "--raw-chan N"
 Set number of channels for raw input (default: 2)
 .IP "--raw-endianness [0/1]"
-Set the endianness for raw input: 1 for bigendian, 0 for little (defaults to 0)
+Set the endianness for raw input: 1 for big endian, 0 for little (default: 0)
 .IP "--ignorelength"
-Always ignore the datalength in Wave headers. Opusenc automatically ignores
+Ignore the data length in Wave headers. Opusenc automatically ignores
 the length when its implausible (very small or very large) but some STDIN
 usage may still need this option to avoid truncation.
+
+.SS "Diagnostic options"
+.IP "--serial n"
+Force use of a specific stream serial number, rather than one that is randomly generated.
+This is used to make the encoder deterministic for testing and is not generally recommended.
+.IP "--save-range file"
+Save check values for every frame to a file
+.IP "--set-ctl-int x=y"
+Pass the encoder control x with value y (advanced).
+Preface with s: to direct the ctl to multistream s
+.br
+This may be used multiple times
 
 .SH EXAMPLES
 
